<resources>
    <string name="app_name">Tuberculosis</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Patient Profile</string>
    <string name="action_checkup">Daily Checkup</string>
    <string name="action_sample_result">Sample Result</string>
    <string name="action_sample_list">Sample List</string>
    <string name="action_med_notification">Medicine Notification</string>
    <string name="action_sample_patient">Patient List</string>
    <string name="action_sample_notifi_list">Sample Notification List</string>
    <string name="action_add_new_sample">Add New Sample</string>
    <string name="action_add_medicine_one">Add Medicine (1/2)</string>
    <string name="action_add_medicine_two">Add Medicine (2/2)</string>
    <string name="action_medicine_list">Medicine Lists</string>
    <string name="action_medicine_details">Medicine Details</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_help">Help</string>
    <string name="title_activity_main_screen">Main Screen</string>
    <string name="change_password">Change Password</string>
    <string name="manage_patient">Patients List</string>
    <string name="action_edit_patient_one">Edit Patient (1/3)</string>
    <string name="action_edit_patient_two">Edit Patient (2/3)</string>
    <string name="action_edit_patient_three">Edit Patient (3/3)</string>
    <string name="action_edit_sample">Edit Samples</string>
    <string name="action_edit_medicine_one">Edit Medicine (1/2)</string>
    <string name="action_edit_medicine_two">Edit Medicine (2/2)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">blank fragment 1</string>
    <string name="title_activity_add_patient_one">Add Patient (1/3)</string>
    <string-array name="select_account_type">
        <item>Select Account type</item>
        <item>Aasha Worker</item>
        <item>Lab Assistant</item>
        <item>Supervisor</item>
    </string-array>
    <string-array name="guardian_arrays">
        <item>Select guardian Type</item>
        <item>S/O</item>
        <item>D/O</item>
        <item>W/O</item>
    </string-array>
    <string-array name="blood_group_arrays">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="listArray">
        <item>Always Show</item>
        <item>Ask before showing</item>
    </string-array>
    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="listVib">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="listVibration">
        <item>Off</item>
        <item>Default</item>
        <item>Short</item>
        <item>Long</item>
    </string-array>
    <string-array name="listLang">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="listLanguages">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="listFontSize">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="listFont">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="route_arrays">
        <item>Select Route Type</item>
        <item>Chewed</item>
        <item>Taken by mouth (orally)</item>
        <item>Injection</item>
        <item>Applied to the skin</item>
        <item>syrup</item>
    </string-array>
    <string-array name="frequency_arrays">
        <item>Select Type</item>
        <item>One-Time</item>
        <item>Daily</item>
        <item>weekly</item>
    </string-array>
    <string-array name="instruction_arrays">
        <item>Take before meal</item>
        <item>Take after meal</item>
        <item>Take during meal</item>
        <item>Take on empty stomach</item>
        <item>Take with milk</item>
        <item>Take with water</item>
        <item>Take with warm water</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_add_patient_two">Add Patient (2/3)</string>
    <string name="title_activity_add_patient_three">Add Patient (3/3)</string>
    <string name="title_activity_add_patient_four">Add Patient (4/4)</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signing_in">Signing in...</string>
    <string name="account_login">Account Login</string>
    <string name="user_name">User Name</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_bt">Sign in</string>
    <string name="request_for_account_bt">Request For Account</string>
    <string name="powered_by_mdi">Powered By mdi (India)</string>
    <string name="alerts">Alerts !</string>
    <string name="medicines_bt">Medicines</string>
    <string name="samples_bt">Samples</string>
    <string name="test_results_bt">Test Results</string>
    <string name="news_tv">News</string>
    <string name="add_new_medicine_bt">Add New Medicine</string>
    <string name="view_list_of_medicine_bt">View List Of medicine</string>
    <string name="edit_medicine_bt">Edit Medicine</string>
    <string name="new_button">New Button</string>
    <string name="new_patient_bt">New Patient</string>
    <string name="patient_profile_bt">Patient Profile</string>
    <string name="edit_patient_bt">Edit Patient</string>
    <string name="add_checkup_record_bt">Add Checkup Record</string>
    <string name="add_new_report_bt">Add New Report</string>
    <string name="report_result_bt">Report Result</string>
    <string name="edit_report_bt">Edit Report</string>
    <string name="delete_report_bt">Delete Report</string>
    <string name="add_new_sample_bt">Add New Sample</string>
    <string name="sample_result_bt">Sample Result</string>
    <string name="edit_sample_bt">Edit Sample</string>
    <string name="delete_sample_bt">Delete Sample</string>
    <string name="profile_asha_worker">Asha Worker</string>
    <string name="profile_account_type">Account Type</string>
    <string name="password_changed_toast">Password Changed Now Login Again</string>
    <string name="pass_setting_user_name">User Name</string>
    <string name="pass_setting_enter_user_name">Enter your login user name</string>
    <string name="pass_setting_password">Password</string>
    <string name="pass_setting_enter_password">Enter your old password</string>
    <string name="pass_setting_new_password">New Password</string>
    <string name="pass_setting_enter_new_password">Enter new paswword</string>
    <string name="pass_setting_re_enter_new_password">Re-Enter New Password</string>
    <string name="patient_blood_group">Blood Group</string>
    <string name="patient_weight">Weight</string>
    <string name="patient_weight_hint">In kilograms</string>
    <string name="patient_height">Height</string>
    <string name="patient_height_hint">In centimetres</string>
    <string name="patient_disease">Another Disease</string>
    <string name="patient_disease_hint">e.g. maleria</string>
    <string name="patient_comments">Comments</string>
    <string name="patient_comments_hint">e.g. any allergies</string>
    <string name="save_bt">Save</string>
    <string name="patient_name">Name</string>
    <string name="patient_name_hint">Patient Name</string>
    <string name="guardian_name_hint">Guardian Name</string>
    <string name="patient_age">Age</string>
    <string name="patient_age_hint">Age in Years</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="select_current_symptoms">Select Current Symptoms</string>
    <string name="symptoms_checkbox_one">Cough/Sputum > 3 Weeks</string>
    <string name="symptoms_checkbox_two">Hemoptysis</string>
    <string name="symptoms_checkbox_three">Fever</string>
    <string name="symptoms_checkbox_four">Weight Lose / Anorexia</string>
    <string name="symptoms_checkbox_five">Wheezing/SOB</string>
    <string name="symptoms_checkbox_six">Night Sweats</string>
    <string name="symptoms_checkbox_seven">Fatigue</string>
    <string name="symptoms_checkbox_eight">Lymphadenpopathy</string>
    <string name="symptoms_checkbox_nine">Headache</string>
    <string name="symptoms_checkbox_ten">Joint Pain</string>
    <string name="any_other_symptoms">Any Other Symptoms</string>
    <string name="other_symptoms">Other Symptoms</string>
    <string name="patient_aadhar_number">Aadhar Number</string>
    <string name="patient_mobile_number">Mobile Number</string>
    <string name="patient_relative_mobile_number">Relative Mobile Number</string>
    <string name="patient_address_1">Address 1</string>
    <string name="patient_address_1_hint">eg: House Number, Street</string>
    <string name="patient_address_2">Address 2</string>
    <string name="patient_address_2_hint">eg: Village ,Town</string>
    <string name="title_activity_new_account_one">New Account (1/3)</string>
    <string name="account_type">Account Type</string>
    <string name="take_image">Take Picture</string>
    <string name="account_name">Name</string>
    <string name="employee_code">Employee Code</string>
    <string name="gender">Gender</string>
    <string name="title_activity_new_account_two">New Account (2/3)</string>
    <string name="title_activity_new_account_three">New Account (3/3)</string>
    <string name="pin_code">Pin Code</string>
    <string name="village_hint">Any other village</string>
    <string name="address">Address</string>
    <string name="address_hint">e.g. House No. , Street</string>
    <string name="Phone_no">Phone Number</string>
    <string name="Aadhar_no">Aadhar Card Number</string>
    <string name="Hospital_Type">Select Hospital Type</string>
    <string name="Hospital_Name">Select Hospital Name</string>
    <string name="Back_Button">Back</string>
    <string name="Next_Button">Next</string>
    <string name="SelectStates">Select State</string>
    <string name="SelectDistts">Select District</string>
    <string name="SelectTehsils">Select Tehsil</string>
    <string name="SelectVillages">Select Village</string>
    <string name="back_bt">Back</string>
    <string name="patient_gender">Gender</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="P_enter_medicine_name">Enter Medicine Name</string>
    <string name="strength">Medicine Strength</string>
    <string name="p_enter_strength">Strength eg: 500mg</string>
    <string name="tablets">Medicine Units</string>
    <string name="p_enter_tablets">Eg: enter no of tablets</string>
    <string name="route">Select Route</string>
    <string name="instructions_hint">Instructions</string>
    <string name="dose_time">Dose Time</string>
    <string name="remove_bt">Remove</string>
</resources>